<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/video_details_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_details_fragment">

            <ImageView
                android:id="@+id/imageView_nextVideo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/next_video"
                android:src="@drawable/ic_navigate_next"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/imageView_previousVideo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/previous_video"
                android:src="@drawable/ic_navigate_before"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/layout_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/imageView_previousVideo"
                app:layout_constraintEnd_toStartOf="@id/imageView_nextVideo"
                app:layout_constraintStart_toEndOf="@id/imageView_previousVideo"
                app:layout_constraintTop_toTopOf="@id/imageView_previousVideo">

                <TextView
                    android:id="@+id/textView_stepNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/step_number"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/slash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/slash"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView_totalSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/total_steps"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>